[package]
name = "uoscripts"
version = "0.1.0"
edition = "2021"
description = "This project is designed to enable the sharing of Ultima Online scripts written in the many varieties of the UO Scripting Language, Python, and C#."
readme = "README.md"
repository = "https://github.com/RoryLetteney/uoscripts"
keywords = ["uo", "scripts", "ultima", "online"]
categories = ["scripting", "gaming", "programming", "macros", "automation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version="0.20", features=["csr"] }
